--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,27 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../static/main.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <script src="jquery.js"></script>
+
 </head>
 
 <body>
   <div id="header">
     <h1> Image-ine This. </h1>
+
   </div>
   <div id="container">
-    
+
     <div id="left">
       <h2> slides </h2>
+      <script>
+      $(document).ready(function(){
+        $("#left").load("static/images/1.jpg");
+      });
+      </script>
+      <img src="static/images/1.jpg" height = "200" width="200">
     </div>
-    
+
     <div id="right">
       <h2>picked</h2>
     </div>
