--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     
     <div id="left">
       <h2> slides </h2>
+      <img src=""/>
+      <button id="addtopicked">add to picked</button>
     </div>
     
     <div id="right">
