--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
     <div id="left">
       <h2> slides </h2>
-      <img id="slideimg" src="" height="30%" width="30%"/> <br> <br>
+      <img id="slideimg" src="../static/images/1.jpg" height="70%" width="70%"/> <br> <br>
       <button id="addtopicked">add to picked</button>
       <script src = "../static/imgine.js"></script>
       <!--
