--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
     <div id="left">
       <h2> slides </h2>
       <img id="slideimg" src="../static/images/1.jpg" height="70%" width="70%"/> <br> <br>
-      <button id="addtopicked">add to picked</button>
+      <button id="addtopicked">Make this photo your pick</button>
       <script src = "../static/imgine.js"></script>
       <!--
-      <script> 
+      <script>
 	$.get("/image", function(data){
 	$("#slideimg").attr("src",data);
 	});
@@ -27,6 +27,8 @@
 
     <div id="right">
       <h2>picked</h2>
+      <img id="pickedImg" src=".jpg" height="70%" width="70%"/> <br> <br>
+      <script src = "../static/imgine.js"></script>
     </div>
 
   </div>
