--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" type="text/css" href="../static/main.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <script src="/../static/jquery.js"></script>
-
+  <title>Image-ine This.</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
     <div id="right">
       <h2>picked</h2>
-      <img id="pickedImg" src=".jpg" height="70%" width="70%"/> <br> <br>
+      <img id="pickedImg" src=".jpg" alt="picked img here!" height="70%" width="70%"/> <br> <br>
       <script src = "../static/imgine.js"></script>
     </div>
 
